[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Enemy_Wolf.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Wolf/wolf_frame_1.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Wolf/wolf_frame_0.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Wolf/wolf_frame_3.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.5, 13 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 60, 13 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.75, 13 )

[node name="Enemy_Wolf" type="KinematicBody2D"]
position = Vector2( 39, 64 )
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 242, 52 )
frames = SubResource( 6 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 242.5, 72 )
shape = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2( 198, 71 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 10, 1 )
shape = SubResource( 5 )

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2( 211, 70 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( -3.25, 2 )
shape = SubResource( 4 )
one_way_collision_margin = 0.0

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
